--- a/app/src/main/res/layout/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout/activity_sales_condition_page.xml
@@ -100,13 +100,77 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
 
-        >
+        app:layout_constraintTop_toTopOf="@+id/guideline3">
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textView27"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="월"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView33"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="화"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView34"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="수"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView35"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="목"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView36"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="금"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView37"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="토"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView38"
+                android:layout_width="59dp"
+                android:layout_height="70dp"
+                android:background="#E9E9E9"
+                android:gravity="center"
+                android:text="일"
+                android:textSize="20sp" />
+
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
@@ -125,5 +189,22 @@
             android:layout_height="match_parent" />
 
     </TableLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:text="년도 선택"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
