--- a/app/src/main/res/layout/activity_mode_change_page.xml
+++ b/app/src/main/res/layout/activity_mode_change_page.xml
@@ -73,12 +73,13 @@
 
     <Button
         android:id="@+id/btn_Mode_change_page"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
         android:background="#000000"
         android:text="모드전환"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
