--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -10,11 +10,20 @@
         android:id="@+id/editTextTextPassword2"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="  Password"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="338dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
+        tools:layout_editor_absoluteX="122dp" />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -30,7 +39,7 @@
         android:id="@+id/button3"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         android:text="로그인"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -53,26 +62,21 @@
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/imageView3"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/user2"
-        tools:layout_editor_absoluteX="74dp"
-        tools:layout_editor_absoluteY="274dp" />
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:srcCompat="@drawable/kobbtext" />
 
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword2"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
-        app:srcCompat="@drawable/passwordkey2" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="70dp"
         android:ems="10"
         android:hint="  User name"
         android:inputType="textPersonName"
@@ -80,5 +84,21 @@
         app:layout_constraintHorizontal_bias="0.606"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword2"
+        app:srcCompat="@drawable/passwordkey2" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3"
+        app:srcCompat="@drawable/usericon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
