--- a/app/src/main/res/layout/activity_mode_change_page.xml
+++ b/app/src/main/res/layout/activity_mode_change_page.xml
@@ -77,7 +77,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
-        android:background="#000000"
+        android:background="#D13B3B"
         android:text="모드전환"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
