--- a/app/src/main/res/layout/activity_mode_change_page.xml
+++ b/app/src/main/res/layout/activity_mode_change_page.xml
@@ -17,13 +17,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
+        android:layout_width="110dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kobb" />
+        app:srcCompat="@drawable/kobbicon" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -75,8 +75,7 @@
         android:id="@+id/btn_Mode_change_page"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="8dp"
         android:background="#000000"
         android:text="모드전환"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
