--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -15,19 +15,21 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
+        android:layout_width="110dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
         android:maxWidth="35dp"
         android:maxHeight="35dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kobb" />
+        app:srcCompat="@drawable/kobbicon" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="#FF5555"
         android:text="모드 전환"
         android:textColor="#FFFFFF"
@@ -113,7 +115,7 @@
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="250dp"
-        android:layout_height="150dp"
+        android:layout_height="250dp"
         android:layout_marginEnd="80dp"
         android:backgroundTint="#FF5555"
         android:scaleType="fitXY"
