--- a/app/src/main/res/layout/activity_small_menu_page.xml
+++ b/app/src/main/res/layout/activity_small_menu_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".small_meun_page">
+    tools:context=".small_menu_page">
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -16,19 +16,21 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
+        android:layout_width="220dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
         android:maxWidth="35dp"
         android:maxHeight="35dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kobb" />
+        app:srcCompat="@drawable/kobbicon" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="#FF5555"
         android:text="모드 전환"
         android:textColor="#FFFFFF"
@@ -58,7 +60,7 @@
         android:gravity="center"
         android:text="상호명"
         android:textColor=" #FF5555"
-        android:textSize="16dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -80,5 +82,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         app:srcCompat="@drawable/back" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
