--- a/app/src/main/res/layout/activity_join_success_page.xml
+++ b/app/src/main/res/layout/activity_join_success_page.xml
@@ -73,6 +73,7 @@
         android:id="@+id/button11"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:background="@color/main_color"
         android:text="로그인"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
