--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -8,14 +8,16 @@
 
     <EditText
         android:id="@+id/editTextTextPassword2"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="  Password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
-        tools:layout_editor_absoluteX="122dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -36,10 +38,11 @@
         app:srcCompat="@drawable/kobbicon" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="300dp"
+        android:id="@+id/btn_Choice_mode_page"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
+        android:background="#FF5555"
         android:text="로그인"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -48,18 +51,18 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="300dp"
+        android:id="@+id/btn_Join_page"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="#FFEAEA"
         android:text="회원가입"
         android:textColor="#040303"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_Choice_mode_page"
+        app:layout_constraintStart_toStartOf="@+id/btn_Choice_mode_page"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Choice_mode_page" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -74,14 +77,16 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="  User name"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.606"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
