--- a/app/src/main/res/layout/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout/activity_start_kiosk_page.xml
@@ -7,7 +7,7 @@
     tools:context=".Start_kiosk_page">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_Choice_mode_page"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
