--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,12 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+            <corners
+                android:radius="50dp"/>
+
+        </shape>
+
     </style>
 </resources>
