--- a/app/src/main/res/layout/activity_manage_main_page.xml
+++ b/app/src/main/res/layout/activity_manage_main_page.xml
@@ -17,7 +17,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="110dp"
+        android:layout_width="220dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -69,15 +69,17 @@
         android:backgroundTint="#FF5555"
         android:text="재고 관리"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition_page"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Control_menu_page" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_Control_menu_page"
+        app:layout_constraintVertical_bias="0.214" />
 
     <ImageButton
         android:id="@+id/btn_User_info_page"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginEnd="16dp"
         android:background="#FFFFFF"
         android:scaleType="fitXY"
@@ -102,7 +104,7 @@
         android:layout_height="wrap_content"
         android:text="관리자 메뉴"
         android:textColor="#504E4E"
-        android:textSize="30sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +113,7 @@
 
     <Button
         android:id="@+id/btn_Start_kiosk_page"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:backgroundTint="#FF5555"
@@ -124,10 +126,10 @@
 
     <Button
         android:id="@+id/btn_Sales_condition_page"
-        android:layout_width="0dp"
+        android:layout_width="500dp"
         android:layout_height="70dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="#FF5555"
         android:text="매출 현황"
@@ -140,13 +142,15 @@
         android:id="@+id/btn_Control_menu_page"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:layout_marginTop="5dp"
         android:backgroundTint="#FF5555"
         android:text="메뉴 관리"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition_page"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Sales_condition_page" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_Sales_condition_page"
+        app:layout_constraintVertical_bias="0.147" />
 
     <Button
         android:id="@+id/btn_Control_kiosk_page"
@@ -156,6 +160,7 @@
         android:backgroundTint="#FF5555"
         android:text="키오스크 관리"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/btn_Sales_condition_page"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Sales_condition_page"
